# Time-Logger

./: CMakeLists.txt
Common/: constants.cpp  constants.h
LogAnalyzer/: CMakeLists.txt  TimeUtils.cpp  TimeUtils.h  main.cpp
TimeLogger/: CMakeLists.txt  Log.cpp  Log.h  TimeLogger.cpp  TimeLogger.h
